fix: all page transitions fixed

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,26 +21,22 @@ main {
     background-color: #ffd9b7;
   }
   &.body-asian-womxn {
-    background-color: #ffd9b7;
+    background-color: #fff0dc;
   }
   &.body-illustrators {
-    // background-color: #fff0dc;
     background-color: #0b1676;
   }
   &.body-spiritual {
-    background-color: #0b1676;
+    background-color: #ddd2f5;
   }
   &.body-blog {
-    background-color: #ddd2f5;
-    // background-color: #0a4d4d;
+    background-color: #0a4d4d;
   }
   &.body-health {
-    background-color: #0a4d4d;
-    // background-color: #ffe2b7;
+    background-color: #ffe2b7;
   }
   &.body-nightsnack {
-    background-color: #ffe2b7;
-    // background-color: #c6d2cf;
+    background-color: #c6d2cf;
   }
 }
 
