--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -18,7 +18,7 @@
     a {
       display: inline-block;
       position: relative;
-      width: 100%;
+      // width: 100%;
       vertical-align: middle;
       overflow: hidden;
 
@@ -145,7 +145,10 @@
       }
 
       @include respond-max($bp-tab) {
-        left: 45%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        right: 0;
       }
     }
 
