--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,19 +1,7 @@
 .nav-row {
   &__btn {
-    bottom: 32px;
+    bottom: 8%;
     position: absolute;
-
-    @include respond-max($bp-tab) {
-      bottom: 50px;
-    }
-
-    @include respond-max($bp-lg-lap) {
-      bottom: 70px;
-    }
-
-    @include respond-max($bp-lg-desk) {
-      bottom: 85px;
-    }
 
     a {
       display: inline-block;
@@ -30,20 +18,11 @@
         @include respond-max($bp-lg-desk) {
           width: 150px;
         }
-        @include respond-max($bp-desk) {
-          width: 150px;
-        }
 
         @include respond-max($bp-lg-lap) {
           width: 110px;
         }
-        @include respond-max($bp-lap) {
-          width: 110px;
-        }
 
-        @include respond-max($bp-tab) {
-          width: 110px;
-        }
         @include respond-max($bp-mob) {
           width: 95px;
         }
@@ -57,15 +36,7 @@
           @include respond-max($bp-desk) {
             width: 150px;
           }
-
           @include respond-max($bp-lg-lap) {
-            width: 136.27px;
-          }
-          @include respond-max($bp-lap) {
-            width: 136.27px;
-          }
-
-          @include respond-max($bp-tab) {
             width: 136.27px;
           }
           @include respond-max($bp-mob) {
@@ -92,9 +63,6 @@
         left: 33px;
       }
 
-      @include respond-max($bp-tab) {
-        left: 33px;
-      }
       @include respond-max($bp-mob) {
         left: 20px;
       }
@@ -102,11 +70,8 @@
 
     &.forward-btn {
       transform: translateX(0%);
-      right: 20px;
+      right: 50px;
 
-      @include respond-max($bp-desk) {
-        right: 50px;
-      }
       @include respond-max($bp-lg-desk) {
         right: 65px;
       }
@@ -118,9 +83,6 @@
         right: 33px;
       }
 
-      @include respond-max($bp-tab) {
-        right: 33px;
-      }
       @include respond-max($bp-mob) {
         right: 20px;
       }
