feat: aw image-well mobile opt

--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -153,8 +153,8 @@
 
     &.aw {
       &-1 {
-        left: 8%;
-        top: 38%;
+        left: 20%;
+        top: 35%;
         transform: translate(-50%, -50%);
         // transform: scale(0.7) translate(-50%, -50%);
 
@@ -164,62 +164,99 @@
         }
 
         img {
-          width: 127px;
+          height: 308px;
+          width: auto;
+
+          @include respond-max($bp-desk) {
+            height: 268px;
+          }
+
+          @include respond-max($bp-lg-lap) {
+            height: 241px;
+          }
+
+          @include respond-max($bp-lap) {
+            height: 192px;
+          }
+
+          @include respond-max($bp-mob) {
+            height: 158px;
+          }
         }
 
-        @include respond-max($bp-tab) {
-          left: 22%;
-          top: 32%;
+        // @include respond-max($bp-tab) {
+        //   left: 22%;
+        //   top: 32%;
 
-          img {
-            width: 154px;
-          }
-        }
+        //   img {
+        //     width: 154px;
+        //   }
+        // }
 
-        @include respond-max($bp-lg-lap) {
-          img {
-            width: 194px;
-          }
-        }
-        @include respond-max($bp-desk) {
-          img {
-            width: 230px;
-          }
-        }
-        @include respond-max($bp-lg-desk) {
-          img {
-            width: 250px;
-          }
-        }
+        // @include respond-max($bp-lg-lap) {
+        //   img {
+        //     width: 194px;
+        //   }
+        // }
+        // @include respond-max($bp-desk) {
+        //   img {
+        //     width: 230px;
+        //   }
+        // }
+        // @include respond-max($bp-lg-desk) {
+        //   img {
+        //     width: 250px;
+        //   }
+        // }
       }
 
       &-2 {
-        height: 20%;
-        left: 13%;
-        top: 60%;
+        left: 11.5%;
+        top: 68%;
 
         &.inactive-card {
           left: -6%;
           top: -58%;
         }
 
-        @include respond-max($bp-mob) {
-          height: 16%;
-          left: 13%;
-          top: 56%;
-          z-index: 10;
+        img {
+          height: 253px;
+          width: auto;
+
+          @include respond-max($bp-desk) {
+            height: 235px;
+          }
+
+          @include respond-max($bp-lg-lap) {
+            height: 192px;
+          }
+
+          @include respond-max($bp-lap) {
+            height: 158px;
+          }
+
+          @include respond-max($bp-mob) {
+            height: 133px;
+          }
         }
 
-        @include respond-max($bp-tab) {
-          height: 25%;
-          left: 13%;
-          top: 65%;
-        }
+        // @include respond-max($bp-mob) {
+        //   height: 16%;
+        //   left: 13%;
+        //   top: 56%;
+        //   z-index: 10;
+        // }
+
+        // @include respond-max($bp-tab) {
+        //   height: 25%;
+        //   left: 13%;
+        //   top: 65%;
+        // }
       }
 
       &-3 {
-        height: 20%;
-        top: 79%;
+        left: 27%;
+        top: 73.5%;
 
         &.inactive-card {
           left: 30%;
@@ -227,45 +264,56 @@
         }
 
         img {
-          width: 131px;
-        }
+          height: 462px;
+          width: auto;
 
-        @include respond-max($bp-tab) {
-          left: 29%;
-          top: 72%;
-
-          img {
-            width: 193px;
+          @include respond-max($bp-desk) {
+            height: 428px;
           }
-        }
 
-        @include respond-max($bp-tab) {
-          img {
-            width: 237px;
+          @include respond-max($bp-lg-lap) {
+            height: 350px;
           }
-        }
 
-        @include respond-max($bp-desk) {
-          img {
-            width: 289px;
+          @include respond-max($bp-lap) {
+            height: 288px;
           }
-        }
-        @include respond-max($bp-lg-desk) {
-          img {
-            width: 312px;
+
+          @include respond-max($bp-mob) {
+            height: 196px;
           }
         }
       }
 
       &-4 {
-        display: none;
-        right: -20%;
-        top: 39%;
-        transform: translate(-50%, -50%) scale(1.5);
+        right: 2%;
+        top: 35%;
+        transform: translate(-50%, -50%);
 
         &.inactive-card {
           left: 93%;
           top: -12%;
+        }
+
+        img {
+          height: 260px;
+          width: auto;
+
+          @include respond-max($bp-desk) {
+            height: 240px;
+          }
+
+          @include respond-max($bp-lg-lap) {
+            height: 197px;
+          }
+
+          @include respond-max($bp-lap) {
+            height: 164px;
+          }
+
+          @include respond-max($bp-mob) {
+            height: 137px;
+          }
         }
 
         @include respond-max($bp-mob) {
@@ -276,8 +324,8 @@
       }
 
       &-5 {
-        right: -14%;
-        bottom: 3%;
+        right: 13%;
+        bottom: -12%;
         transform: translate(-50%, -50%);
 
         &.inactive-card {
@@ -286,16 +334,29 @@
         }
 
         img {
-          width: 125px;
+          height: 339px;
+          width: auto;
+
+          @include respond-max($bp-desk) {
+            height: 314px;
+          }
+
+          @include respond-max($bp-lg-lap) {
+            height: 257px;
+          }
+
+          @include respond-max($bp-lap) {
+            height: 219px;
+          }
+
+          @include respond-max($bp-mob) {
+            height: 156px;
+          }
         }
 
         @include respond-max($bp-mob) {
           right: -3%;
           bottom: 5%;
-
-          img {
-            width: 181px;
-          }
         }
 
         @include respond-max($bp-tab) {
@@ -304,32 +365,43 @@
         }
 
         @include respond-max($bp-lg-lap) {
-          img {
-            width: 211px;
-          }
         }
 
         @include respond-max($bp-desk) {
-          img {
-            width: 258px;
-          }
         }
 
         @include respond-max($bp-lg-desk) {
-          img {
-            width: 278px;
-          }
         }
       }
 
       &-6 {
-        height: 16%;
-        bottom: 25%;
-        right: -5%;
+        bottom: 12%;
+        right: 0%;
 
         &.inactive-card {
           bottom: -28%;
           right: -30%;
+        }
+
+        img {
+          height: 270px;
+          width: auto;
+
+          @include respond-max($bp-desk) {
+            height: 250px;
+          }
+
+          @include respond-max($bp-lg-lap) {
+            height: 204px;
+          }
+
+          @include respond-max($bp-lap) {
+            height: 169px;
+          }
+
+          @include respond-max($bp-mob) {
+            height: 138px;
+          }
         }
 
         @include respond-max($bp-mob) {
