fix: aw appear anim fix

--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -107,7 +107,7 @@
       left: 50%;
       z-index: 999;
       top: 55%;
-      transform: translate(-50%, -50%) scale(1.1);
+      transform: translate(-50%, -50%);
 
       img {
         height: 650px;
@@ -340,6 +340,7 @@
         right: 13%;
         bottom: -12%;
         transform: translate(-50%, -50%);
+        z-index: 2;
 
         @include respond-max($bp-desk) {
           right: 11.5%;
@@ -357,8 +358,8 @@
         }
 
         &.inactive-card {
-          right: 11.5%;
-          bottom: -8%;
+          bottom: -45%;
+          right: -30%;
         }
 
         img {
@@ -386,7 +387,7 @@
       &-6 {
         bottom: 12%;
         right: 0%;
-        z-index: -1;
+        z-index: 0;
 
         @include respond-max($bp-desk) {
           right: -2%;
